--- a/client/src/app/auth/auth.component.html
+++ b/client/src/app/auth/auth.component.html
@@ -1,1 +1,13 @@
-<p>auth works!</p>
+<div class="w-screen h-screen flex justify-center items-center">
+    <div class="auth-card border-2 bg-slate-50 border-gray-300 h-2/3 w-1/3 rounded-xl relative">
+        <div class="hello-img h-[80%] w-[60%] absolute top-0 right-[80%] z-0">
+            <img src="../../assets/images/hello-male.png" alt="">
+        </div>
+        <div class="hello-img h-[80%] w-[60%] absolute top-0 left-[80%] z-0">
+            <img src="../../assets/images/hello-female.png" alt="">
+        </div>
+        <div class="form-card h-full w-full bg-slate-50 z-20 relative rounded-xl">
+
+        </div>
+    </div>
+</div>
