--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -5,8 +5,13 @@
 @tailwind utilities;
 
 
-body{
-    font-family: 'Inter', sans-serif;
+body {
+  font-family: 'Inter', sans-serif;
+  height: inherit;
+  width: 100%;
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+img {
+  height: 100%;
+  width: 100%;
+}
