basic form structure created for login signup

--- a/client/src/app/auth/auth.component.html
+++ b/client/src/app/auth/auth.component.html
@@ -21,11 +21,7 @@
                 <div class="logo h-24 w-28 m-auto">
                     <img src="../../assets/images/temp-logo.png" alt="">
                 </div>
-                <p class="text-center mt-4 font-bold text-4xl">Login</p>
-                <p class="mt-4 ml-4 mr-4 text-center text-sm text-[#717171]">Lorem, ipsum dolor sit amet consectetur
-                    adipisicing elit.
-                    Incidunt,
-                    dolore asdfdasfsfdasfdasdf.</p>
+                <p class="text-center mt-4 font-bold text-4xl">Register</p>
             </div>
             <div>
                 <router-outlet></router-outlet>
