--- a/client/src/app/auth/auth.component.html
+++ b/client/src/app/auth/auth.component.html
@@ -1,4 +1,4 @@
-<div class="w-screen h-screen flex justify-center items-center">
+<div class="w-screen h-screen flex justify-center pt-24">
     <div class="auth-card  bg-slate-50  min-h-2/3 h-[400px] w-1/3 rounded-xl relative">
         <div class="hello-img h-[80%] w-[60%] absolute top-0 right-[80%] z-0">
             <img src="../../assets/images/hello-male.png" alt="">
