working on homepage

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<div class="flex" >
+    <div class="all-chats w-[30%] h-screen" >
+        <app-all-chats></app-all-chats>
+    </div>
+    <div class="all-chats w-[70%]  h-screen">
+        <app-chat></app-chat>
+    </div>
+</div>
