--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -7,8 +7,9 @@
 
 body {
   font-family: 'Inter', sans-serif;
-  height: inherit;
-  width: 100%;
+  /* height: inherit; */
+  max-width: 100%;
+  max-height: 100%;
 }
 
 img {
