scroll behaviour basics done

--- a/client/src/app/home/chat/chat-section/chat-section.component.html
+++ b/client/src/app/home/chat/chat-section/chat-section.component.html
@@ -1,5 +1,5 @@
-<div class="flex  items-stretch flex-col bg-black">
-    <div class="chats flex-grow overflow-auto">
+<div class="flex flex-col justify-between">
+    <div class="chats flex-grow overflow-auto pb-20">
         <div class="chat bg-[#61C554] p-2 text-white h-fit w-fit max-w-screen-sm rounded-xl">
             <p class="text-xs">adsfdfs Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab fugiat odio a quas harum explicabo maiores nisi. Aliquid asperiores reiciendis sint hic aperiam repellendus, pariatur, sed culpa incidunt consectetur ratione!</p>
         </div>
@@ -8,6 +8,18 @@
         </div>
         
         
+        <div class="chat bg-[#131313] p-2 text-white h-fit w-fit max-w-screen-sm rounded-xl">
+            <p class="text-xs">adsfdfs Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab fugiat odio a quas harum explicabo maiores nisi. Aliquid asperiores reiciendis sint hic aperiam repellendus, pariatur, sed culpa incidunt consectetur ratione!</p>
+        </div>
+        <div class="chat bg-[#131313] p-2 text-white h-fit w-fit max-w-screen-sm rounded-xl">
+            <p class="text-xs">adsfdfs Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab fugiat odio a quas harum explicabo maiores nisi. Aliquid asperiores reiciendis sint hic aperiam repellendus, pariatur, sed culpa incidunt consectetur ratione!</p>
+        </div>
+        <div class="chat bg-[#131313] p-2 text-white h-fit w-fit max-w-screen-sm rounded-xl">
+            <p class="text-xs">adsfdfs Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab fugiat odio a quas harum explicabo maiores nisi. Aliquid asperiores reiciendis sint hic aperiam repellendus, pariatur, sed culpa incidunt consectetur ratione!</p>
+        </div>
+        <div class="chat bg-[#131313] p-2 text-white h-fit w-fit max-w-screen-sm rounded-xl">
+            <p class="text-xs">adsfdfs Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab fugiat odio a quas harum explicabo maiores nisi. Aliquid asperiores reiciendis sint hic aperiam repellendus, pariatur, sed culpa incidunt consectetur ratione!</p>
+        </div>
         <div class="chat bg-[#131313] p-2 text-white h-fit w-fit max-w-screen-sm rounded-xl">
             <p class="text-xs">adsfdfs Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab fugiat odio a quas harum explicabo maiores nisi. Aliquid asperiores reiciendis sint hic aperiam repellendus, pariatur, sed culpa incidunt consectetur ratione!</p>
         </div>
@@ -27,8 +39,8 @@
             <p class="text-xs">adsfdfs Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab fugiat odio a quas harum explicabo maiores nisi. Aliquid asperiores reiciendis sint hic aperiam repellendus, pariatur, sed culpa incidunt consectetur ratione!</p>
         </div>
     </div>
-    <div class="chat-send flex-grow bg-black rounded-xl h-10 ml-4 mb-2">
-        <div class="send-input h-full w-[80%] rounded-xl overflow-hidden">
+    <div class="chat-send flex-grow bg-black h-10 w-full pl-4 fixed bottom-0">
+        <div class="send-input h-full rounded-xl overflow-hidden">
             <input type="text" class="bg-[#131313] h-full w-full">
         </div>
     </div>
