--- a/client/src/app/home/chat/chat.component.html
+++ b/client/src/app/home/chat/chat.component.html
@@ -1,5 +1,5 @@
-<div class="h-full bg-black flex flex-col">
-    <div class="chat-nav min-h-[4.5rem] bg-[#131313] flex items-center  px-6" >
+<div class="h-full bg-black flex flex-col ">
+    <div class="chat-nav min-h-[4.5rem] bg-[#131313] flex items-center px-6" >
         <div class="dp h-10 w-10 rounded-full overflow-hidden">
             <img src="../../../assets/images/dp.jpg" alt="">
         </div>   
@@ -8,7 +8,7 @@
             <p class="text-xs">Online</p>
         </div>     
     </div>
-    <div class="chat-section flex flex-col">
-        <app-chat-section class=" flex-grow bg-white"></app-chat-section>
+    <div class="chat-section overflow-auto flex-grow">
+        <app-chat-section></app-chat-section>
     </div>
 </div>
