scroll to bottom chat when init added

--- a/client/src/app/home/chat/chat-section/chat-section.component.html
+++ b/client/src/app/home/chat/chat-section/chat-section.component.html
@@ -1,41 +1,46 @@
 <div class="flex flex-col justify-between">
-    <div class="chats flex-grow overflow-auto pb-20">
-        <div class="chat bg-[#61C554] p-2 text-white h-fit w-fit max-w-screen-sm rounded-xl">
+    <div class="chats flex-grow flex flex-col gap-3 overflow-auto pb-20">
+        <div class="mr-2 chat bg-[#61C554] p-2 items-end self-end text-white h-fit w-fit max-w-screen-sm rounded-xl">
             <p class="text-xs">adsfdfs Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab fugiat odio a quas harum explicabo maiores nisi. Aliquid asperiores reiciendis sint hic aperiam repellendus, pariatur, sed culpa incidunt consectetur ratione!</p>
         </div>
-        <div class="chat bg-[#61C554] p-2 text-white h-fit w-fit max-w-screen-sm rounded-xl">
+        <div class="mr-2 chat bg-[#61C554] relative self-end p-2 text-white h-fit w-fit max-w-screen-sm rounded-xl">
             <p class="text-xs">adsfdfs Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab fugiat odio a quas harum explicabo maiores nisi. Aliquid asperiores reiciendis sint hic aperiam repellendus, pariatur, sed culpa incidunt consectetur ratione!</p>
         </div>
-        
-        
-        <div class="chat bg-[#131313] p-2 text-white h-fit w-fit max-w-screen-sm rounded-xl">
+    
+        <div class="ml-2 chat bg-[#131313] p-2 text-white h-fit w-fit max-w-screen-sm rounded-xl">
             <p class="text-xs">adsfdfs Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab fugiat odio a quas harum explicabo maiores nisi. Aliquid asperiores reiciendis sint hic aperiam repellendus, pariatur, sed culpa incidunt consectetur ratione!</p>
         </div>
-        <div class="chat bg-[#131313] p-2 text-white h-fit w-fit max-w-screen-sm rounded-xl">
+        <div class=" ml-2 chat bg-[#131313] p-2 text-white h-fit w-fit max-w-screen-sm rounded-xl">
             <p class="text-xs">adsfdfs Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab fugiat odio a quas harum explicabo maiores nisi. Aliquid asperiores reiciendis sint hic aperiam repellendus, pariatur, sed culpa incidunt consectetur ratione!</p>
         </div>
-        <div class="chat bg-[#131313] p-2 text-white h-fit w-fit max-w-screen-sm rounded-xl">
+        <div class=" ml-2 chat bg-[#131313] p-2 text-white h-fit w-fit max-w-screen-sm rounded-xl">
             <p class="text-xs">adsfdfs Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab fugiat odio a quas harum explicabo maiores nisi. Aliquid asperiores reiciendis sint hic aperiam repellendus, pariatur, sed culpa incidunt consectetur ratione!</p>
         </div>
-        <div class="chat bg-[#131313] p-2 text-white h-fit w-fit max-w-screen-sm rounded-xl">
+        <div class=" ml-2 chat bg-[#131313] p-2 text-white h-fit w-fit max-w-screen-sm rounded-xl">
             <p class="text-xs">adsfdfs Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab fugiat odio a quas harum explicabo maiores nisi. Aliquid asperiores reiciendis sint hic aperiam repellendus, pariatur, sed culpa incidunt consectetur ratione!</p>
         </div>
-        <div class="chat bg-[#131313] p-2 text-white h-fit w-fit max-w-screen-sm rounded-xl">
+        <div class=" ml-2 chat bg-[#131313] p-2 text-white h-fit w-fit max-w-screen-sm rounded-xl">
             <p class="text-xs">adsfdfs Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab fugiat odio a quas harum explicabo maiores nisi. Aliquid asperiores reiciendis sint hic aperiam repellendus, pariatur, sed culpa incidunt consectetur ratione!</p>
         </div>
-        <div class="chat bg-[#131313] p-2 text-white h-fit w-fit max-w-screen-sm rounded-xl">
+        <div class=" ml-2 chat bg-[#131313] p-2 text-white h-fit w-fit max-w-screen-sm rounded-xl">
             <p class="text-xs">adsfdfs Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab fugiat odio a quas harum explicabo maiores nisi. Aliquid asperiores reiciendis sint hic aperiam repellendus, pariatur, sed culpa incidunt consectetur ratione!</p>
         </div>
-        <div class="chat bg-[#131313] p-2 text-white h-fit w-fit max-w-screen-sm rounded-xl">
+        <div class=" ml-2 chat bg-[#131313] p-2 text-white h-fit w-fit max-w-screen-sm rounded-xl">
             <p class="text-xs">adsfdfs Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab fugiat odio a quas harum explicabo maiores nisi. Aliquid asperiores reiciendis sint hic aperiam repellendus, pariatur, sed culpa incidunt consectetur ratione!</p>
         </div>
-        <div class="chat bg-[#131313] p-2 text-white h-fit w-fit max-w-screen-sm rounded-xl">
+        <div class=" ml-2 chat bg-[#131313] p-2 text-white h-fit w-fit max-w-screen-sm rounded-xl">
             <p class="text-xs">adsfdfs Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab fugiat odio a quas harum explicabo maiores nisi. Aliquid asperiores reiciendis sint hic aperiam repellendus, pariatur, sed culpa incidunt consectetur ratione!</p>
         </div>
-        <div class="chat bg-[#131313] p-2 text-white h-fit w-fit max-w-screen-sm rounded-xl">
+        <div class=" ml-2 chat bg-[#131313] p-2 text-white h-fit w-fit max-w-screen-sm rounded-xl">
             <p class="text-xs">adsfdfs Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab fugiat odio a quas harum explicabo maiores nisi. Aliquid asperiores reiciendis sint hic aperiam repellendus, pariatur, sed culpa incidunt consectetur ratione!</p>
         </div>
-        <div class="chat bg-[#131313] p-2 text-white h-fit w-fit max-w-screen-sm rounded-xl">
+        <div class=" ml-2 chat bg-[#131313] p-2 text-white h-fit w-fit max-w-screen-sm rounded-xl">
+            <p class="text-xs">adsfdfs Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab fugiat odio a quas harum explicabo maiores nisi. Aliquid asperiores reiciendis sint hic aperiam repellendus, pariatur, sed culpa incidunt consectetur ratione!</p>
+        </div>
+        <div class=" chat bg-[#61C554] p-2 self-end text-white h-fit w-fit max-w-screen-sm rounded-xl">
+            <p class="text-xs">adsfdfs Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab fugiat odio a quas harum explicabo maiores nisi. Aliquid asperiores reiciendis sint hic aperiam repellendus, pariatur, sed culpa incidunt consectetur ratione!</p>
+        </div>
+        <div class="chat bg-[#61C554] p-2 self-end text-white h-fit w-fit max-w-screen-sm rounded-xl">
             <p class="text-xs">adsfdfs Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab fugiat odio a quas harum explicabo maiores nisi. Aliquid asperiores reiciendis sint hic aperiam repellendus, pariatur, sed culpa incidunt consectetur ratione!</p>
         </div>
     </div>
