--- a/client/src/app/home/chat/chat.component.html
+++ b/client/src/app/home/chat/chat.component.html
@@ -8,7 +8,7 @@
             <p class="text-xs">Online</p>
         </div>     
     </div>
-    <div class="chat-section overflow-auto flex-grow">
+    <div #scrollMe class="chat-section overflow-scroll flex-grow">
         <app-chat-section></app-chat-section>
     </div>
 </div>
